After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 654541 - Default save location for debug reports is /tmp
Default save location for debug reports is /tmp
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
3.1.x
Other Linux
: Normal minor
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-07-13 11:03 UTC by Rob
Modified: 2011-07-14 11:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
A patch changing the default save location for debug logs to the users home directory. (826 bytes, patch)
2011-07-13 11:03 UTC, Rob
committed Details | Review

Description Rob 2011-07-13 11:03:03 UTC
Created attachment 191874 [details] [review]
A patch changing the default save location for debug logs to the users home directory.

Preconditions: Empathy running

Steps to reproduce: In empathy's contact list select: help, debug
Then from the debug window select save

Expected Result: The debug log(s) would be saved somewhere easy to access such as the home folder by default.

Actual Result: The default save location is /tmp in the file system and is an inconvenience to access.

The attachment is a patch that changes the default save location to the user's home directory, rather than /tmp.
Comment 1 Guillaume Desmottes 2011-07-14 11:39:03 UTC
Agreed that's more convenient; I'll merge to master. Thanks a lot of the patch !