Debug logs will now be saved in the user's home directory rather than /tmp

https://bugzilla.gnome.org/show_bug.cgi?id=654541